Issue with my header img overlapping my main section

--- a/styles.css
+++ b/styles.css
@@ -166,36 +166,29 @@ HIGHLIGHTS
     max-width: 100vw;   
 }
 
-#highlights:before {
-   
-}
-
+#highlights:after,
 #highlights:before {
     background: url('assets/wave.svg');
     content: "";
     position: absolute;
     width: 101vw;
     height: 12vw;
-    top: 1px;
     left: 0;
     z-index: 1;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+#highlights:before {
     transform: translateY(-100%);
+    top: 1px;
+
 }
 
 #highlights:after {
-    background: url('assets/wave.svg');
-    content: "";
-    position: absolute;
-    width: 101vw;
-    height: 12vw;
-    bottom: 1px;
-    left: 0;
-    z-index: 1;
-    background-size: cover;
-    background-repeat: no-repeat;
     transform: translateY(100%) rotate(180deg);
+    bottom: 1px;
+
 }
 
 .highlight__wrapper {
@@ -242,5 +235,25 @@ FEATTURED
 */
 
 #featured {
+    padding-top: 8vw;
     background-color: rgba(115, 66, 214, 0.1);
+}
+
+.books {
+    display: flex;
+}
+
+.book {
+    width: 25%;
+    padding: 24px;
+}
+
+.book__img {
+    max-height: 380px;
+}
+
+.book__img--wrapper {
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
 }
